2010-03-16  Florent Rougon  <flo@via.ecp.fr>

	* dialog.py: add support for dialog options --no-label,
	--yes-label and --insecure (the last one not being so dangerous as
	the name seems to imply: "Makes the password widget friendlier but
	less secure, by echoing asterisks for each character"; BTW, kdm
	has a very nice way of handling this issue IMO: an option that
	echoes each character with x asterisks, where x = 3 IIRC).

2010-03-14  Florent Rougon  <flo@via.ecp.fr>

	* Release 2.09.

	* dialog.py: new supported widgets: editbox, inputmenu, mixedform,
	mixedgauge, pause, passwordform, progressbox.

	* demo.py: general improvements, such as:
	    - hopefully more helpful dialog when the user fails to select
	      a file in fselect;
	    - since actually selecting a file with this widget is already
	      boring after the second time, the widget can be exited by
	      pressing Esc or the Cancel button (in which case the parts
	      of the demo that need the file path will be skipped).
	    - replace a few calls to Dialog.scrollbox() by calls to
	      Dialog.msgbox(), since the latter provides nice automatic
	      line wrapping.

	* demo.py: support GNU-style option passing with getopt.py; you
	can use --help to get a list of available options
	* demo.py: no need to change a global variable anymore to switch
	the demo to "fast mode", just use --fast
	* demo.py: add --test-suite mode, mainly for developers: it
	tests *all* widgets, not only those included in the "default
	mode", and automatically enables "fast mode".

	* dialog.py(__call_program): make the function more generic. stdin
	redirection doesn't involve automatic pipe(2) creation in
	__call_program() anymore; instead, __call_program expects a file
	descriptor when it is asked to redirect dialog's stdin (parameter
	'redir_child_stdin_from_fd').

	The caller may still decide to create a pipe and pass its file
	descriptor for reading as the 'redir_child_stdin_from_fd'